--- a/styles/style.css
+++ b/styles/style.css
@@ -226,7 +226,7 @@ input::placeholder{
 }
 .slide:nth-child(4) .offer{
   position: absolute;
-  width: 200px;
+  width: 170px;
   height: 100px;
   left: 10px;
   margin-top: 25px;
@@ -307,7 +307,7 @@ article .top{
   margin-top: 7px;
   align-self: center;
   padding: 10px 0px;
-  padding-top: 20px;
+  padding-top: 70px;
   overflow-x: auto;
   justify-content: space-evenly;
   display: flex;
@@ -316,6 +316,24 @@ article .top{
   overflow: hidden;
   background-color: #fff;
   gap: 9px;
+}
+
+.shop span{
+ margin-top: -50px;
+  margin-bottom: 5px;
+  margin-left: -30px;
+  font-family: "poppins";
+  font-weight: 900;
+  font-size: 18px;
+  align-self: center;
+  justify-self: left;
+}
+
+.shop .logo{
+  width: 20px;
+  height: 20px;
+  align-self: center;
+  justify-self: left;
 }
 
 .sofa{
@@ -368,6 +386,7 @@ article .top{
 }
 
 .card-rating{
+  margin-top: 45px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -375,13 +394,15 @@ article .top{
 }
 
 .card-rating span{
+  margin-left: -25px;
   font-family: "poppins";
+  font-style: italic;
   font-weight: 800;
   text-transform: uppercase;
 } 
 
 .rating-star{
-  margin-top: -13px;
+  margin-top: -20px;
 }
 
 .star{
@@ -448,3 +469,30 @@ article .top{
   fill: red;
   color: red;
 }
+
+/*skeleton*/
+
+.skeleton{
+  position: relative;
+  transition: 500ms;
+}
+
+.skeleton:before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-size: 200%;
+  z-index: 100;
+  background-image: linear-gradient(90deg, #999,#bbb,#999);
+  animation: skeleton 1s infinite both alternate ;
+}
+
+@keyframes skeleton{
+  0%{background-position: -100% 0}
+  100%{background-position: 100%;}
+}
+/*skeleton end*/
+
